--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -29,7 +29,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads.html">Download</a>
+                    <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads">Download</a>
                     <a class="nav-item nav-link conan-center" href="/center">
                         <img src="img/conan-center-logo.png" width="20" height="26" alt="Conan Center central repository" /><span>Conan Center</span>
                     </a>
