added electrolux logo

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
                     <img src="img/logo/microblink.png" width="160" height="119" alt="Microblink Logo">
                 </div>
                 <div class="user-box">
+                    <img src="img/logo/electrolux.png" width="160" height="119" alt="Electrolux Logo">
+                </div>
+                <div class="user-box">
                     <img src="img/logo/openrov.png" width="160" height="119" alt="OpenROV Logo">
                 </div>
                 <div class="user-box">
