--- a/tt-design/privacy-policy.html
+++ b/tt-design/privacy-policy.html
@@ -5,22 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <title>C/C++ Open Source Package Manager</title>
-  <link rel="canonical" href="https://ncamaa.github.io/website" />
+  <link rel="canonical" href="https://conan.io/privacy-policy.html" />
 
   <!-- FONT -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
 
   <!-- STYLE -->
-  <link rel="stylesheet" href="slick/slick.css" />
-  <link rel="stylesheet" href="slick/slick-theme.css"/>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/style.css" />
-
-  <!-- JS -->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="slick/slick.min.js"></script>
-  <script src="js/scripts.js"></script>
 
 </head>
 <body class="privacy-policy">
