--- a/downloads.html
+++ b/downloads.html
@@ -207,7 +207,7 @@
               <p class="mb-2">
                 Once the Conan client is installed, you can access Conan repositories in Artifactory trough its comand line interface.
               </p>
-              <a href="docs.html" class="green">
+              <a href="https://docs.conan.io" class="green">
                 Read more >
               </a>
             </div>
