--- a/downloads.html
+++ b/downloads.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <title>C/C++ Open Source Package Manager</title>
-  <link rel="canonical" href="https://ncamaa.github.io/website" />
+  <link rel="canonical" href="https://conan.io/downloads.html" />
 
   <!-- FONT -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
@@ -67,7 +67,7 @@
 <!-- HERO -->
 <section id="hero" class="download-hero blue-gradient-bg py-5 position-relative">
   <img src="img/downloads-squares.png" class="position-absolute hero-bg downloads-hero-bg" alt="JFrog Conan">
-  <div class="container py-5">
+  <div class="container">
     <div class="row">
       <div class="col-12 text-center">
         <div class="hero-content py-3">
@@ -111,7 +111,7 @@
               <h5>Install with</h5>
               <div class="installers pb-4">
                 <!-- PYTON -->
-                <a class="cn-box big cn-copy" data-toggle="tooltip" data-placement="top" data-copy-value="$ pip install conan">
+                <a class="cn-box big cn-copy" data-toggle="tooltip" data-placement="top" data-copy-value="pip install conan">
                   <img src="img/downloads/pyton-small-pack.png" alt="Pyton" class="mr-2">
                   <span>$ pip install conan</span>
                 </a>
@@ -119,7 +119,7 @@
               <h5>Other Installers</h5>
               <div class="installers pb-4">
                 <!-- DARWIN -->
-                <a class="cn-box small cn-copy" data-toggle="tooltip" data-placement="top" data-copy-value="$ brew install conan">
+                <a class="cn-box small cn-copy" data-toggle="tooltip" data-placement="top" data-copy-value="brew install conan">
                   <img src="img/downloads/darwin-small-pack.png" alt="Darwin">
                 </a>
                 <!-- LINUX -->
@@ -137,7 +137,7 @@
                   </div>
                 </div>
                 <!-- ARCHLINUX $ yay -S conan-->
-                <a class="cn-box small cn-copy" data-toggle="tooltip" data-placement="top" data-copy-value="$ yay -S conan">
+                <a class="cn-box small cn-copy" data-toggle="tooltip" data-placement="top" data-copy-value="yay -S conan">
                   <img src="img/downloads/archlinux-small-pack.png" alt="ArchLinux">
                 </a>
               </div>
@@ -207,7 +207,7 @@
               <p class="mb-2">
                 Once the Conan client is installed, you can access Conan repositories in Artifactory trough its comand line interface.
               </p>
-              <a href="https://docs.conan.io" class="green">
+              <a href="https://www.jfrog.com/confluence/display/JFROG/Conan+Repositories" class="green">
                 Read more >
               </a>
             </div>
@@ -218,7 +218,7 @@
 
     </div>
 
-    <div class="row py-5 mb-5 download-questions">
+    <div class="mb-5 download-questions">
       <div class="col-12 text-center">
         <h2 class="font-weight-bold pb-3">Questions about Installation?</h2>
         <p>
