--- a/index.html
+++ b/index.html
@@ -284,65 +284,51 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-12">
-            <div class="users-table-wrapper pb-3">
-              <table>
-                <tbody>
-                  <tr>
-                    <td>
-                      <img src="img/brands/company_29.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_27.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_28.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_26.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_25.png" alt="JFrog User" />
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <img src="img/brands/company_32.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_33.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_34.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_30.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_31.png" alt="JFrog User" />
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <img src="img/brands/company_39.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_38.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_36.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_37.png" alt="JFrog User" />
-                    </td>
-                    <td>
-                      <img src="img/brands/company_35.png" alt="JFrog User" />
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+        <div class="users-flex d-flex">
+          <div class="user-box inner">
+            <img src="img/brands/company_29.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_27.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_28.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_26.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_25.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_32.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_33.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_34.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_30.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_31.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_39.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_38.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_36.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_37.png" alt="Cient" />
+          </div>
+          <div class="user-box inner">
+            <img src="img/brands/company_35.png" alt="Cient" />
           </div>
         </div>
       </div>
