--- a/downloads.html
+++ b/downloads.html
@@ -64,21 +64,8 @@
   </div>
 </header>
 
-<!-- HERO -->
-<section id="hero" class="download-hero blue-gradient-bg py-5 position-relative">
+<section id="downloads" class="pt-5">
   <img src="img/downloads-squares.png" class="position-absolute hero-bg downloads-hero-bg" alt="JFrog Conan">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <div class="hero-content py-3">
-          <h1 class="white">Downloads</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="downloads">
   <div class="container">
     <div class="row py-5">
 
