--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
       <div class="container py-3">
         <div class="row">
           <div class="col-12 text-center">
-            <img src="img/diagram.png" alt="Diagram" />
+            <img src="img/diagram.png" alt="Diagram" class="d-none d-sm-block" />
+            <img src="img/conan-io-diagram-mobile.png" alt="Diagram" class="d-sm-none" />
           </div>
         </div>
       </div>
