--- a/downloads.html
+++ b/downloads.html
@@ -234,7 +234,7 @@ helm install --name artifactory jfrog/artifactory-oss
         <h2 class="font-weight-bold pb-3">Questions about Installation?</h2>
         <p>
           Contact the community on
-          <a href="https://cpplang.now.sh/">
+          <a href="https://cpplang.​slack.​com/?id=conan">
             <img src="img/social/slack.svg" alt="slack"> Slack
           </a>
           or see our <a href="https://docs.conan.io/">
@@ -301,7 +301,7 @@ helm install --name artifactory jfrog/artifactory-oss
                 <li><a href="https://facebook.com/conan.io">
                   Facebook
                 </a></li>
-                <li><a href="https://cpplang.now.sh/">
+                <li><a href="https://cpplang.​slack.​com/?id=conan">
                   Slack #conan
                 </a></li>
               </ul>
@@ -352,7 +352,7 @@ helm install --name artifactory jfrog/artifactory-oss
             </li>
             <!-- SLACK -->
             <li>
-              <a class="mr-2" href="https://cpplang.now.sh/">
+              <a class="mr-2" href="https://cpplang.​slack.​com/?id=conan">
                 <img src="img/social/slack.svg" alt="slack">
               </a>
             </li>
