--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="https://cpplang.now.sh/">
+                      <a href="https://cpplang.​slack.​com/?id=conan">
                         Slack #conan
                       </a>
                     </li>
@@ -984,7 +984,7 @@
                 </li>
                 <!-- SLACK -->
                 <li>
-                  <a class="mr-2" href="https://cpplang.now.sh/">
+                  <a class="mr-2" href="https://cpplang.​slack.​com/?id=conan">
                     <img src="img/social/slack.svg" alt="slack" />
                   </a>
                 </li>
