--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -275,7 +275,7 @@
                 <li><a href="https://facebook.com/conan.io">
                   Facebook
                 </a></li>
-                <li><a href="https://cpplang.now.sh/">
+                <li><a href="https://cpplang.​slack.​com/?id=conan">
                   Slack #conan
                 </a></li>
               </ul>
@@ -326,7 +326,7 @@
             </li>
             <!-- SLACK -->
             <li>
-              <a class="mr-2" href="https://cpplang.now.sh/">
+              <a class="mr-2" href="https://cpplang.​slack.​com/?id=conan">
                 <img src="img/social/slack.svg" alt="slack">
               </a>
             </li>
