--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -159,7 +159,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
                 <li><a href="https://facebook.com/conan.io">
                   Facebook
                 </a></li>
-                <li><a href="https://cpplang.now.sh/">
+                <li><a href="https://cpplang.​slack.​com/?id=conan">
                   Slack #conan
                 </a></li>
               </ul>
@@ -210,7 +210,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
             </li>
             <!-- SLACK -->
             <li>
-              <a class="mr-2" href="https://cpplang.now.sh/">
+              <a class="mr-2" href="https://cpplang.​slack.​com/?id=conan">
                 <img src="img/social/slack.svg" alt="slack">
               </a>
             </li>
