--- a/downloads.html
+++ b/downloads.html
@@ -179,7 +179,7 @@
                   <img src="img/downloads/linux-small-pack.png" alt="tar-gz">
                 </a>
                 <!-- DEBIAN -->
-                <a href="downloads/conan-debian.zip" class="cn-box small cn-download" data-toggle="tooltip" data-placement="top" title="Download">
+                <a href="https://api.bintray.com/content/jfrog/artifactory-debs/pool/jfrog-artifactory-oss/jfrog-artifactory-oss-$latest.deb;bt_package=jfrog-artifactory-oss" class="cn-box small cn-download" data-toggle="tooltip" data-placement="top" title="Download">
                   <img src="img/downloads/debian-small-pack.png" alt="debian">
                 </a>
                 <!-- RPM -->
